2010-03-16 Guido Scholz <guido.scholz@bayernline.de>
	* srcp-gl.c: Cleaned up GL address validity check. Patch
	provided by Harald Barth.

--- Release 2.1.1 ----

2010-03-04 Guido Scholz <guido.scholz@bayernline.de>
	* srcp-fb.*, srcp-info.c, srcp-command.c: Fixed undelivered
	INFO messages caused by sizeof(msg).

2010-03-03 Guido Scholz <guido.scholz@bayernline.de>
	* i2c-dev.*: Fixed opensuse compile error, unused function
	parameters removed

2010-03-01 Guido Scholz <guido.scholz@bayernline.de>
	* loconet.c: Fixed Loconet module init routine.


--- Release 2.1.0 ----

2010-02-21 Guido Scholz <guido.scholz@bayernline.de>
	* ddl-s88.*: FreeBSD compile errors fixed.

2010-01-09 Guido Scholz <guido.scholz@bayernline.de>
	* ddl.c, srcpd.conf.5: Default value for usleep_patch in DDL
	module set to "yes".

2009-12-27 Matthias Trute <mtrute@users.sourceforge.net>
	* src/loconet.[ch]: use an input buffer to accumulate serial
	 characters until a complete loconet packet is received.

2009-12-20 Matthias Trute <mtrute@users.sourceforge.net>
	* src/loconet.c: renamed setting names: loconetID -> loconet-id
	  and getTIME to sync-time-from-loconet, activated DESCRIOPTION

2009-12-19 Guido Scholz <guido.scholz@bayernline.de>
	* man/*: Content of English and German manual pages aligned.
	* srcpd.conf.5, de/srcpd.conf.5: Example bus sections for ddl,
	ddl-s88, hsi-88, intellibox, loconet (very bare), loopback and
	m605x added.

2009-08-21 Matthias Trute <mtrute@users.sourceforge.net>
	* src/Makefile.am src/toolbox.c src/toolbox.h src/ib.c
	src/li100-main.c src/loopback.c: new module toolbox, contains 
	the cmpTime function found in multiple driver files.

2009-08-17 Guido Scholz <guido.scholz@bayernline.de>
	* configure.in: Let the configure script show a short summary
	about which modules are in and out, only check for ioperm() if
	ddl-s88 module is used, use AC_HELP_STING to format "configure
	--help" messages

2009-08-18 Matthias Trute <mtrute@users.sourceforge.net>